kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
  labels:
    app.kubernetes.io/part-of: ecommerce
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
